use of virtual thread instead of normal threads